      C++.
    + [BR] Fix another false positive for gfdl invariants in
      php-elisp.
    + [BR] Detect old path for upstream metadata.
  * checks/files.pm:
    + [BR] Fix false positive in detection of cross arch pkgconfig.
      (Closes: #755902).
    + [BR] Detect privacy breach fixable by using existing debian
      package.
  * checks/changes-file.{desc,pm}:
    + [BR] Add patch from Ivo De Decker, add check for
      backports changes file.  (Closes: #732225).
    + [BR] Apply patch from Tomasz Bucher, add check for
      for timestamped gzip files.  (Closes: #738591).
  * checks/menu-format.pm:
    + [BR] Add new desktop keys files. Move key list to data.
      (Closes: #755266).
  * checks/phppear.pm:
    + [BR] Fix a false positive for
      missing-pkg-php-tools-addon phpcomposer, thanks to
      David Prévot (Closes: #754738).
  * checks/source-copyright.{desc,pm}:
    + [BR] Add a pedantic warning about non dep-5 debian/copyright.
    + [BR] Detect empty required fields.  (Closes: #748452).
    + [BR] Detect undefined license.  (Closes: #733659).
  * checks/testsuite.desc:
    + [BR] Update ref url.  (Closes: #755275).

  * data/cruft/warn-file-type:
    + [BR] Add debug source suffix for detecting javascript
      source-is-missing and improve test suite. Fix a
      false postive in mono.
  * data/files/js-libraries:
    + [BR] Apply patch from Paul Wise for detection of
      libjs-excanvas.
  * data/files/privacy-breaker-website:
    + [BR] Improve detection of sourceforge logos.
    + [BR] Detect libjs-jquery use.
    + [BR] Detect libjs-mathjax use.
    + [BR] Add count.digitalpoint.com to statistics website.
  * data/debhelper/dh_commands:
    + [BR] Add patch from  Piotr Ożarowski, dh-python2
      moved to dh-python package (Closes: #740161).

  * doc/tutorial/Lintian/Tutorial/WritingChecks.pod:
    + [NT] Correct tutorial now that the "index" collection
      is gone.

 -- Niels Thykier <niels@thykier.net>  Sun, 13 Jul 2014 21:04:57 +0200
