@@ -1,0 +1,14 @@
+<html lang="en">
+<head>
+<title>Possible layout-outlines - ECB - the Emacs Code Browser</title>
+<meta http-equiv="Content-Type" content="text/html">
+<meta name="description" content="ECB - the Emacs Code Browser">
+<meta name="generator" content="makeinfo 4.8">
+<link title="Top" rel="start" href="ecb.html#Top">
+<link rel="up" href="The-layout_002dengine.html#The-layout_002dengine" title="The layout-engine">
+<link rel="prev" href="Programming-special-windows.html#Programming-special-windows" title="Programming special windows">
+<link rel="next" href="The-layout_002dengine-API.html#The-layout_002dengine-API" title="The layout-engine API">
+<link href="http://www.gnu.org/software/texinfo/" rel="generator-home" title="Texinfo Homepage">
+<meta http-equiv="Content-Style-Type" content="text/css">
+</head>
+</html>
